# path_fun

./: README.rst  main_app.py  pyproject.toml
secondary_app/: secondary_app.py
tests/: test_path_fun.py
